# scoreline_task

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
app/: main.py
app/core/: gw_index.py  player_directory.py  timeseries.py
app/data/: fplcache_io.py
app/models/: api.py  fpl.py
scripts/: fetch_fplcache.sh
tests/: test_fplcache_io.py  test_gw_index.py  test_timeseries.py
